update docs/swagger pages
